--- a/src/components/QRTypeForms/TextForm/TextForm.css
+++ b/src/components/QRTypeForms/TextForm/TextForm.css
@@ -1,5 +1,5 @@
 .text-form {
-  font-size: larger;
+  font-size: large;
 
   & textarea {
     height: 100%;
